Bug 131261 - Cannot set "Flat" shading mode in 3D Effects dialog
Summary: Cannot set "Flat" shading mode in 3D Effects dialog
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: x86-64 (AMD64) All
: medium major
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.0.0
Keywords: bibisectRequest, regression
Depends on:
Blocks:
 
Reported: 2020-03-10 18:44 UTC by Regina Henschel
Modified: 2020-03-11 10:43 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
For testing shading mode (11.91 KB, application/vnd.oasis.opendocument.graphics)
2020-03-10 18:44 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2020-03-10 18:44:54 UTC
Created attachment 158572 [details]
For testing shading mode

Open attached document. It contains a 3D-scene with "Flat" shading mode.
Open "3D Effects" dialog from shapes context menu.
Go to register "Shading".
Set shading mode to "Gouraud". Click "Apply". Notice, shading changes.
Set shading mode back to "Flat". Click "Apply". Notice, shading does not change.
Same problem with "Phong" and back to "Flat".

It was OK in Version: 6.5.0.0.alpha0+ (x64)
Build ID: 147af9e2cf7f937ed83ab00574b6a418a2cb629e
CPU threads: 8; OS: Windows 10.0 Build 18362; UI render: GL; VCL: win; 
Locale: en-US (en_US); UI-Language: en-US
Calc: CL

It is broken in Version: 7.0.0.0.alpha0+ (x64)
Build ID: f61fa885ed929e7d4aea4d84b2ddadea4825eb18
CPU threads: 8; OS: Windows 10.0 Build 18362; UI render: default; VCL: win; 
Locale: de-DE (en_US); UI-Language: en-US
Calc: CL
Comment 1 Julien Nabet 2020-03-10 22:16:30 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this.
Comment 2 Julien Nabet 2020-03-10 22:19:49 UTC
Maybe I'm wrong but I think regression is due to:
https://cgit.freedesktop.org/libreoffice/core/commit/?id=278f01eadd513608e306ea6b85d52fb115a6dedf
author	Caolán McNamara <caolanm@redhat.com>	2020-01-23 15:28:08 +0000
committer	Caolán McNamara <caolanm@redhat.com>	2020-01-24 15:59:50 +0100
commit 278f01eadd513608e306ea6b85d52fb115a6dedf (patch)
tree dc4e9a62dc3753353fd1202a28f84d1599cf3996
parent d52384260c4a8f096945b33b89430398ffa69431 (diff)
weld Svx3DWin

Let's try this patch:
https://gerrit.libreoffice.org/c/core/+/90311
Comment 3 Commit Notification 2020-03-11 09:04:20 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ec6c252c52413b389aaa22fe6df979feb0429da2

tdf#131261: fix Cannot set "Flat" shading mode in 3D Effects dialog

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Julien Nabet 2020-03-11 10:43:07 UTC
My initial patch was wrong so I unassign myself because the real patch comes from Caolán.
Thank you to him! :-)