tdf#131261: fix Cannot set "Flat" shading mode in 3D Effects dialog

Regression from:
https://cgit.freedesktop.org/libreoffice/core/commit/?id=278f01eadd513608e306ea6b85d52fb115a6dedf
author	Caolán McNamara <caolanm@redhat.com>	2020-01-23 15:28:08 +0000
committer	Caolán McNamara <caolanm@redhat.com>	2020-01-24 15:59:50 +0100
commit	278f01eadd513608e306ea6b85d52fb115a6dedf (patch)
tree	dc4e9a62dc3753353fd1202a28f84d1599cf3996
parent	d52384260c4a8f096945b33b89430398ffa69431 (diff)
weld Svx3DWin

Change-Id: I7d7d5cb0f40da310103a1c281b381818948257f1